--- a/store/app/design/frontend/icu/icu/template/catalog/product/view.phtml
+++ b/store/app/design/frontend/icu/icu/template/catalog/product/view.phtml
@@ -58,19 +58,12 @@
 			$url = Mage::getStoreConfig('web/unsecure/base_url') . $category;
 		}
 
-		$headlineTxt = Mage::app()->getStore()->getStoreId() == "1" ? "Shop ICU Online" : "boutique en ligne ICU";
+		$headlineTxt = Mage::app()->getStore()->getStoreId() == "1" ? "Shop Online" : "boutique en ligne ICU";
 	?>
-	<h1><a href="<?= $url; ?>" title="<?= $headlineTxt; ?>"><?= $headlineTxt; ?></a></h1>
+	<h1><?= $headlineTxt; ?></h1>
 </div>
 
-<form 	action="<?php echo $this->getAddToCartUrl($_product) ?>" 
-		method="post" 
-		id="product_addtocart_form" 
-		class="row"
-	<?php if($_product->getOptions()): ?> 
-		enctype="multipart/form-data"
-	<?php endif; ?>
-	>
+<div id="product_wrapper">
 	
   <!-- BEGIN media.phtml page -->
 	<div id="media_wrapper" class="span6 pull-left">
@@ -123,47 +116,56 @@
 <!-- END product_info_tabs -->	  
 		  
 
-<!-- BEGIN add_to_cart  -->
-<div id="add_to_cart">
+<form 	action="<?php echo $this->getAddToCartUrl($_product) ?>" 
+		id="product_addtocart_form" 
+		method="post" 
+	<?php if($_product->getOptions()): ?> 
+		enctype="multipart/form-data"
+	<?php endif; ?>
+	>
+	<!-- BEGIN add_to_cart  -->
+	<div id="add_to_cart">
 
-	 	<?php if ($_product->isSaleable() && $this->hasOptions()):?>
-			<?= $this->getChildChildHtml('container2', '', true, true) ?>
-		<?php endif;?>
-	  
-		<strong>
-		<?= $this->getChildHtml('product_type_data') ?>
-		</strong>
+		 	<?php if ($_product->isSaleable() && $this->hasOptions()):?>
+				<?= $this->getChildChildHtml('container2', '', true, true) ?>
+			<?php endif;?>
+		  
+			<strong>
+			<?= $this->getChildHtml('product_type_data') ?>
+			</strong>
 
-		<?php if($_product->isSaleable()): ?>
-		  <?= $this->getChildHtml('addtocart') ?>
-		<?php endif; ?>
-						
-		<input type="submit" 
-		 		class="icu-btn" 
-		 		value="<?php if(Mage::app()->getStore()->getStoreId() == "1"){ 
-		 				echo "ADD TO CART"; 
-		 		}else{ 	echo "AJOUTER AU PANIER"; }?>" 
-		 /> 
+			<?php if($_product->isSaleable()): ?>
+			  <?= $this->getChildHtml('addtocart') ?>
+			<?php endif; ?>
+							
+			<input type="submit" 
+			 		class="icu-btn" 
+			 		value="<?php if(Mage::app()->getStore()->getStoreId() == "1"){ 
+			 				echo "ADD TO CART"; 
+			 		}else{ 	echo "AJOUTER AU PANIER"; }?>" 
+			 /> 
 
-</div>
-<!-- END add_to_cart  -->
+	</div>
+	<!-- END add_to_cart  -->
+</form>
 		
  	 </div><!--   end #pro_des_section -->
 
-</form>
+</div>
+
 
 <div id="product_detail_boxes" class="row">
 
 	<div class="span3 product-detail-box">
                 <h5>SECURE ONLINE PAYMENT</h5>
-                <p>All payment secured by, Authorize.net. We accept the following payment methods: <img src="<?= $this->getSkinUrl('images/creditcardsoffered.jpg'); ?>"></p>
-				<a href="#" class="learn-more-btn pull-right" onclick="MM_openBrWindow('<?= $this->getBaseUrl(); ?>/secure-online-payment.html','','scrollbars=yes,width=720,height=460')" title="More Info">+Learn More</a>
+                <p>All payment secured by PayPal. We accept the following payment methods: <img src="<?= $this->getSkinUrl('images/creditcardsoffered.jpg'); ?>"></p>
+				<a href="http://paypal.com" class="learn-more-btn pull-right" title="More Info">+Learn More</a>
 	</div>
 	
 	<div class="span3 product-detail-box">
                 <h5>WORLDWIDE SHIPPING</h5>
                 <p>Your ICU - In Paris is shipped within 24 hours of purchase directly from the designer's atelier. One shipping fee charged.</p>
-				<a href="#" class="learn-more-btn pull-right" onclick="MM_openBrWindow('<?= $this->getBaseUrl(); ?>/shipping-info.html','','scrollbars=yes,width=720,height=460')" title="Learn More">+Learn More</a>
+				<a href="<?= $this->getBaseUrl(); ?>/shipping" class="learn-more-btn pull-right" title="Learn More">+Learn More</a>
 	</div>
 	<div class="span3 product-detail-box">
                 <h5>CUSTOMER SERVICE</h5>                
@@ -175,6 +177,6 @@
 	<div class="span3 product-detail-box">
                 <h5>RETURNS & EXCHANGES</h5>
                 <p>Within 7 days of product delivery we are happy to issue a customer return if you are dis-satisfied with your ICU - In Paris purchase.</p>
-				<a href="#" class="learn-more-btn pull-right" onclick="MM_openBrWindow('<?= $this->getBaseUrl(); ?>/returns-exchanges.html','','scrollbars=yes,width=720,height=460')" title="Learn More">+Learn More</a>
+				<a href="<?= $this->getBaseUrl(); ?>/returns" class="learn-more-btn pull-right" title="Learn More">+Learn More</a>
 	</div>
 </div><!-- END product_detail_boxes -->
