--- a/store/app/design/frontend/icu/icu/template/catalog/product/list.phtml
+++ b/store/app/design/frontend/icu/icu/template/catalog/product/list.phtml
@@ -54,7 +54,7 @@
 		$material 	= "";
 		$designer 	= "";
 		$countryorig = "";
-		if($_GET['style']){
+		if(isset($_GET['style'])){
 			$attributeId = '118';
 			$attribute = Mage::getModel('catalog/resource_eav_attribute')->load($attributeId);
 			$attributeOptions = $attribute ->getSource()->getAllOptions();				
@@ -64,7 +64,7 @@
 				}
 			}
 		}
-		if($_GET['material']){
+		if(isset($_GET['material'])){
 			$attributeId = '120';
 			$attribute = Mage::getModel('catalog/resource_eav_attribute')->load($attributeId);
 			$attributeOptions = $attribute ->getSource()->getAllOptions();
@@ -74,7 +74,7 @@
 				}
 			}
 		}
-		if($_GET['designer']){
+		if(isset($_GET['designer'])){
 			$attributeId = '119';
 			$attribute = Mage::getModel('catalog/resource_eav_attribute')->load($attributeId);
 			$attributeOptions = $attribute ->getSource()->getAllOptions();
@@ -84,7 +84,7 @@
 				}
 			}
 		}
-		if($_GET['countryorig']){
+		if(isset($_GET['countryorig'])){
 			$attributeId = '127';
 			$attribute = Mage::getModel('catalog/resource_eav_attribute')->load($attributeId);
 			$attributeOptions = $attribute ->getSource()->getAllOptions();
@@ -95,11 +95,11 @@
 			}
 		}
 		
-		if($_GET['style']){
+		if(isset($_GET['style'])){
 			echo strtoupper($style);
-		}else if($_GET['material']){
+		}else if(isset($_GET['material'])){
 			echo strtoupper($material);
-		}else if($_GET['designer']){
+		}else if(isset($_GET['designer'])){
 			echo strtoupper($designer);
 		}else if($this->helper('catalogSearch')->getEscapedQueryText()){ 
 			echo ucwords($this->helper('catalogSearch')->getEscapedQueryText()); 
@@ -217,28 +217,28 @@
 	  	if($breadcrumbs) echo $breadcrumbs->toHtml();
 	  	 */
 		if(Mage::app()->getStore()->getStoreId() == "1"){ echo "Sort by price"; }else{ echo "Trier par prix"; } ?>: <?php echo "<a href=\"?";
-				if($_GET['price']){ 
+				if(isset($_GET['price'])){ 
 					echo "&price=" . $_GET['price'];
 				}
-				if($_GET['countryorig']){
+				if(isset($_GET['countryorig'])){
 					echo "&countryorig=" . $_GET['countryorig'];
 				}
-				if($_GET['style']){
+				if(isset($_GET['style'])){
 					echo "&style=" . $_GET['style'];
 				}
-				if($_GET['material']){
+				if(isset($_GET['material'])){
 					echo "&material=" . $_GET['material'];
 				}
-				if($_GET['material_2']){
+				if(isset($_GET['material_2'])){
 					echo "&material_2=" . $_GET['material_2'];
 				}
-				if($_GET['designer']){
+				if(isset($_GET['designer'])){
                 	echo "&designer=" . $_GET['designer'];
                 }
-				if($_GET['limit']){
+				if(isset($_GET['limit'])){
 					echo "&limit=" . $_GET['limit'];
 				}
-				if($_GET['q']){
+				if(isset($_GET['q'])){
 					echo "&q=" . $_GET['q'];
 				}
 				if(Mage::app()->getStore()->getStoreId() == "1"){
@@ -248,34 +248,34 @@
 				}
 				
 				echo "<a href=\"?";
-				if($_GET['price']){ 
+				if(isset($_GET['price'])){ 
 					echo "&price=" . $_GET['price'];
 				}
-				if($_GET['countryorig']){
+				if(isset($_GET['countryorig'])){
 					echo "&countryorig=" . $_GET['countryorig'];
 				}
-				if($_GET['style']){
+				if(isset($_GET['style'])){
 					echo "&style=" . $_GET['style'];
 				}
-				if($_GET['material']){
+				if(isset($_GET['material'])){
 					echo "&material=" . $_GET['material'];
 				}
-				if($_GET['material_2']){
+				if(isset($_GET['material_2'])){
 					echo "&material_2=" . $_GET['material_2'];
 				}
-				if($_GET['designer']){
+				if(isset($_GET['designer'])){
                 	echo "&designer=" . $_GET['designer'];
                 }
-				if($_GET['limit']){
+				if(isset($_GET['limit'])){
 					echo "&limit=" . $_GET['limit'];
 				}
-				if($_GET['q']){
+				if(isset($_GET['q'])){
 					echo "&q=" . $_GET['q'];
 				}
 				if(Mage::app()->getStore()->getStoreId() == "1"){
-					echo "&dir=asc&order=price\" class=\"tTip\" title=\"Sort Low to High\">Low</a>";
+					echo "&dir=asc&order=price\" title=\"Sort Low to High\">Low</a>";
 				}else{
-					echo "&dir=asc&order=price\" class=\"tTip\" title=\"Trier min à max\">Min</a>";
+					echo "&dir=asc&order=price\" title=\"Trier min à max\">Min</a>";
                 }?>
         <?php 
 		echo "</div>";
@@ -306,13 +306,18 @@
 	 
 	  
 <div class="pro_box span3">
-	<div>	  
-	<a 	href="<?php echo $_product->getProductUrl() ?>" 
-		onmouseout="MM_swapImgRestore()" 
-		onmouseover="MM_swapImage('<?php echo $i . "image"; ?>','','<?php echo $this->helper('catalog/image')->init($_product, 'thumbnail')->resize(195, 292); ?>',0)">
-		<img src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(195, 292); ?>" alt="<?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?>" name="<?php echo $i . "image"; ?>" id="<?php echo $i . "image"; ?>" />
+
+	<a 	href="<?= $_product->getProductUrl() ?>" title="<?= $_helper->productAttribute($_product, $_product->getName(), 'name') ?>" >
+		<img 
+		src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(195, 292); ?>" 
+		alt="<?= $_helper->productAttribute($_product, $_product->getName(), 'name') ?>" 
+		name="<?= $i . "image"; ?>" 
+		id="<?= $i . "image"; ?>" 
+		data-over="<?= $this->helper('catalog/image')->init($_product, 'thumbnail')->resize(195, 292); ?>"
+		data-out="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(195, 292); ?>"
+		/>
 	</a>
-</div><div>
+<div>
 
 
 	<a href="<?php echo $_product->getProductUrl(); ?>" class="prodtitlelink">
