--- a/store/app/design/frontend/icu/icu/template/catalog/product/view.phtml
+++ b/store/app/design/frontend/icu/icu/template/catalog/product/view.phtml
@@ -172,7 +172,7 @@
                 <p>e-mail: <a href="mailto:customerservice@icuinparis.com" target="_blank">customerservice@icuinparis.com</a><br>
                     skype: <a href="skype:icuinparis?chat">icuinparis</a><br>
                     mon-fri, 9am-6pm CET</p>
-				<a href="<?= $this->getBaseUrl(); ?>/customer-service.html" class="learn-more-btn pull-right" title="Learn More">+Learn More</a>
+				<a href="<?= $this->getBaseUrl(); ?>/contact-us.html" class="learn-more-btn pull-right" title="Learn More">+Learn More</a>
 	</div>	
 	<div class="span3 product-detail-box">
                 <h5>RETURNS & EXCHANGES</h5>
