--- a/store/app/design/frontend/icu/icu/template/page/html/pager.phtml
+++ b/store/app/design/frontend/icu/icu/template/page/html/pager.phtml
@@ -84,7 +84,18 @@
 						<li class="current">|</li>
 					<?php } ?>
         		<?php endforeach;?>
-				<a href="<?php $t3array = explode("?", $this->helper('core/url')->getCurrentUrl()); echo $t3array[0]; ?>?limit=all<?php if($_GET['price']){ echo "&price=" . $_GET['price']; } if($_GET['style']){ echo "&style=" . $_GET['style']; } if($_GET['countryorig']){ echo "&countryorig=" . $_GET['countryorig']; } if($_GET['material']){ echo "&material=" . $_GET['material']; } if($_GET['designer']){ echo "&designer=" . $_GET['designer']; } if($_GET['q']){ echo "&q=" . $_GET['q']; } ?>" class="prodtitlelink"><?php if(Mage::app()->getStore()->getStoreId() == "1"){ echo "view all products"; }else{ echo "voir tous les produits"; } ?></a>
+				<a 
+                    href="<?php 
+                    $t3array = explode("?", $this->helper('core/url')->getCurrentUrl()); 
+                    echo $t3array[0]; ?>?limit=all<?php 
+                    if($_GET['price']){ echo "&price=" . $_GET['price']; } 
+                    if($_GET['style']){ echo "&style=" . $_GET['style']; } 
+                    if($_GET['countryorig']){ echo "&countryorig=" . $_GET['countryorig']; } 
+                    if($_GET['material']){ echo "&material=" . $_GET['material']; } 
+                    if($_GET['designer']){ echo "&designer=" . $_GET['designer']; } 
+                    if($_GET['q']){ echo "&q=" . $_GET['q']; } 
+                    ?>" 
+                    class="prodtitlelink"><?php if(Mage::app()->getStore()->getStoreId() == "1"){ echo "view all products"; }else{ echo "voir tous les produits"; } ?></a>
 
         		<?php if ($this->canShowNextJump()): ?>
             		<li><a class="next_jump" title="" href="<?php echo $this->getNextJumpUrl() ?>">...</a></li>
@@ -108,7 +119,17 @@
 					}
 				?>
 				<?php 
-				if($this->getTotalNum() > 12){?> - <a href="<?php $t3array = explode('?', $this->helper('core/url')->getCurrentUrl()); echo $t3array[0]; ?>?limit=12&p=1<?php if($_GET['price']){ echo "&price=" . $_GET['price']; } if($_GET['style']){ echo "&style=" . $_GET['style']; } if($_GET['countryorig']){ echo "&countryorig=" . $_GET['countryorig']; } if($_GET['material']){ echo "&material=" . $_GET['material']; } if($_GET['designer']){ echo "&designer=" . $_GET['designer']; } if($_GET['q']){ echo "&q=" . $_GET['q']; }?>">click here to show 12 per page </a><?php }?></div></div>
+				if($this->getTotalNum() > 12){?> - <a  href="<?php 
+                    $t3array = explode('?', $this->helper('core/url')->getCurrentUrl()); 
+                    echo $t3array[0]; 
+                    ?>?limit=12&p=1<?php 
+                    if($_GET['price']){ echo "&price=" . $_GET['price']; } 
+                    if($_GET['style']){ echo "&style=" . $_GET['style']; } 
+                    if($_GET['countryorig']){ echo "&countryorig=" . $_GET['countryorig']; } 
+                    if($_GET['material']){ echo "&material=" . $_GET['material']; } 
+                    if($_GET['designer']){ echo "&designer=" . $_GET['designer']; } 
+                    if($_GET['q']){ echo "&q=" . $_GET['q']; }
+                    ?>">click here to show 12 per page </a><?php }?></div></div>
 		<?php } ?>
     	<?php if($this->getUseContainer()): ?>
     		</div>
