--- a/store/app/design/frontend/icu/icu/template/page/template/container.phtml
+++ b/store/app/design/frontend/icu/icu/template/page/template/container.phtml
@@ -29,7 +29,7 @@
  * @see Mage_Page_Block_Template_Container
  */
 ?>
-<div class="page-title">
+<div class="headline">
     <h1><?php echo $this->getTitle() ?></h1>
 </div>
 <?php echo $this->getChildHtml() ?>
