--- a/store/skin/frontend/icu/icu/css/styles.css
+++ b/store/skin/frontend/icu/icu/css/styles.css
@@ -287,7 +287,13 @@ p.required { font-size:11px; text-align:right; color:#EB340A; }
 
 .messages,
 .messages ul { list-style:none !important; margin:0 !important; padding:0 !important; }
-.messages { width:100%; overflow:hidden; }
+.messages {
+    left: 190px;
+    overflow: hidden;
+    position: absolute;
+    top: 90px;
+    width: auto;
+}
 .messages li { margin:0 0 10px !important; }
 .messages li li { margin:0 0 3px !important; }
 .error-msg,
