--- a/store/app/design/frontend/icu/icu/template/page/3columns.phtml
+++ b/store/app/design/frontend/icu/icu/template/page/3columns.phtml
@@ -44,7 +44,7 @@
 		<?php echo $this->getChildHtml('header') ?>
 		<!-- /HEADER AND NAVIGATION SECTION -->
 
-		<!-- content poop container -->
+		<!-- content container -->
 		<?php echo $this->getChildHtml('content') ?> 
 		<!-- /content container -->
 
