--- a/store/skin/frontend/icu/icu/css/style.css
+++ b/store/skin/frontend/icu/icu/css/style.css
@@ -856,7 +856,9 @@ input[type="submit"].btn01 {
 
 	#content3 .designer_design img {display:block}
 
-
+input, textarea, .uneditable-input {
+    width: 250px;
+}
 #design-submit-form {
 	width: 575px;	
 	padding:0; 
@@ -1908,11 +1910,19 @@ color:#000000;
 /* @media queries */
 /*****************************************************************************
 /*****************************************************************************/
+@media (max-width: 1198px) {
+	input, textarea, .uneditable-input {
+    width: 202px;
+}
+}
 @media (max-width: 979px) {
 	#store_subnav_wrapper{
 		position: relative;
 	}
 	ol,ul{ margin: 0;}
 	.hdr-search{ float: left;}
+input, textarea, .uneditable-input {
+    width: 150px;
+}
 }
 
