--- a/php/ored-styles.css
+++ b/php/ored-styles.css
@@ -112,7 +112,7 @@ ul.sub-menu li {
 }
 
 h1{
-    padding: 12px 0px 10px 220px; 
+    padding: 12px 0px 0px 220px; 
     text-shadow:none; 
     font-size: 5.0em; 
     line-height: 83px;
@@ -122,7 +122,9 @@ h1{
     font-family: 'JosefinSansStdLight', 'Source Sans Pro', sans-serif; 
 }
 #description{
-    padding-top: 35px;
+    padding-top: 0px;
+    padding-left: 220px; 
+    margin-top: -20px;
 }
 #description p, .page-template-single-designers-php p{
  
@@ -140,7 +142,7 @@ h1{
     background-repeat: repeat-x;
     background-color: rgba(0, 0, 0, 0.19);
     font-family: "Gotham-Light", sans-serif;
-
+    margin-top: 30px;
 }
 #footer form{
     margin-bottom: 0;
@@ -167,8 +169,11 @@ h1{
 /*****************************************************************************/
 
 @media (max-width: 979px) {
-    h1{
+    h1, #description{
         padding-left: 0;
+    }
+    h1{
+        line-height: 66px;
     }
 .navbar .brand{
         text-indent: 0;
