--- a/php/ored-styles.css
+++ b/php/ored-styles.css
@@ -134,7 +134,10 @@ h1{
     font-size: 1.8em;
     font-family: 'JosefinSansStdLight', 'Source Sans Pro', sans-serif; 
 }
+#content{
 
+    margin-top: 20px; 
+}
 #footer {
 
     border-top: 1px solid #676D76;
