--- a/store/app/design/frontend/icu/icu/template/checkout/cart/noItems.phtml
+++ b/store/app/design/frontend/icu/icu/template/checkout/cart/noItems.phtml
@@ -24,9 +24,10 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-<div class="page-title">
-    <h1><?php echo $this->__('Shopping Cart is Empty') ?></h1>
+<div id="headline">
+    <h1><?= $this->__('Cart is Empty') ?></h1>
 </div>
-<?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
-<p><?php echo $this->__('You have no items in your shopping cart.') ?></p>
-<p><?php echo $this->__('Click <a href="%s">here</a> to continue shopping.', $this->getContinueShoppingUrl()) ?></p>
+<?= $this->getMessagesBlock()->getGroupedHtml() ?>
+<div id="description">
+	<p><?= $this->__('You have no items in your shopping cart.') ?> <?= $this->__('Click <a href="%s">here</a> to continue shopping.', $this->getContinueShoppingUrl()) ?></p>
+</div>
