Styles, bugs, markup oh my.

--- a/php/ored-styles.css
+++ b/php/ored-styles.css
@@ -204,6 +204,9 @@ h1{
     .navbar .btn-navbar {
         margin-right: 20px;
     }
+    #social_account li > a{
+        padding-left: 16px;
+    }
 }
 @media screen and (max-width: 480px) {
     .page #content header{
