--- a/store/app/design/frontend/icu/icu/template/customer/form/forgotpassword.phtml
+++ b/store/app/design/frontend/icu/icu/template/customer/form/forgotpassword.phtml
@@ -1,38 +1,39 @@
 <div id="headline">
-  <h1>Forgot your password?</h1>
+  <h1>Forgot password?</h1>
 </div>
 <div id="description">
       <p>Please enter your email address and click submit. We will send you an email containing a link to reset your password.</p>
 </div>
 
-<form id="forgot_form" class="span5" action="<?= $this->getUrl('*/*/forgotpasswordpost') ?>" method="post">
-  <input type="email" name="email" alt="email" id="email_address" class="input-text required-entry validate-email" value="<?= $this->htmlEscape($this->getEmailValue()); ?>" placeholder="Your Email Address" />
-  <input class="icu-btn" type="submit" value="Submit"  />
-</form>
+<div id="content">
+  <form id="forgot_form" class="span5" action="<?= $this->getUrl('*/*/forgotpasswordpost') ?>" method="post">
+    <h3>Enter your email.</h3>
+    <input type="email" name="email" alt="email" id="email_address" class="input-text required-entry validate-email" value="<?= $this->htmlEscape($this->getEmailValue()); ?>" placeholder="Your Email Address" />
+    <input class="icu-btn" type="submit" value="Submit"  />
+  </form>
 
-<h3 class="span2">OR</h3>
-  
-<form id="login-form" class="span5" action="<?= $this->getUrl().'customer/account/login/' ?>" method="post">
-    
-  <h3>Try signing in again:</h3>
-  <form id="login_form" action="<?= $this->getPostActionUrl() ?>" method="post">
-  <input  type="email" 
-          id="email" 
-          class="icu-input required-entry validate-email" 
-          name="login[username]" 
-          value="<?= $this->htmlEscape($this->getUsername()) ?>" 
-          title="<?= $this->__('Email Address') ?>" 
-          placeholder="Your Address"
-        />
-  <input  type="password" 
-          id="pass" 
-          class="required-entry validate-password" 
-          name="login[password]" 
-          title="<?= $this->__('Password') ?>"  
-          placeholder="Password"
-        />
-  <input class="icu-btn" type="submit" value="Login"  />
-</form>
+  <h3 class="span2">OR</h3>
+
+  <form id="login_form" class="span4" action="<?= $this->getUrl().'customer/account/login/' ?>" method="post">
+    <h3>Try signing in again.</h3>
+    <input  type="email" 
+            id="email" 
+            class="icu-input required-entry validate-email" 
+            name="login[username]" 
+            value="<?= $this->htmlEscape($this->getUsername()) ?>" 
+            title="<?= $this->__('Email Address') ?>" 
+            placeholder="Your Address"
+          />
+    <input  type="password" 
+            id="pass" 
+            class="required-entry validate-password" 
+            name="login[password]" 
+            title="<?= $this->__('Password') ?>"  
+            placeholder="Password"
+          />
+    <input class="icu-btn" type="submit" value="Login"  />
+  </form>
+</div>
 <script type="text/javascript">
 //<![CDATA[
 	var dataForm = new VarienForm('forgot_form', true);
