--- a/store/skin/frontend/icu/icu/css/style.css
+++ b/store/skin/frontend/icu/icu/css/style.css
@@ -82,6 +82,11 @@ input[type="button"].btn01 {margin:0; padding:0; width:160px; height:30px; backg
 	color: white;
 	border: none;
 }
+.icu-btn:hover{
+	color: white;
+	text-decoration: none;
+	background-color: #a0a0a0;
+}
 input[type="submit"].btn01 {
 	margin:0; 
 	padding:0; 
@@ -140,7 +145,7 @@ input[type="submit"].btn01 {
 	#keyword input[type="text"] {
 		margin:0; 
 		padding:4px 4px; 
-		width:170px; 
+		width:140px; 
 		background-color:#E6E6E6; 
 		border-radius: 0;
 		font-family:Arial, Helvetica, sans-serif; 
@@ -158,7 +163,7 @@ input[type="submit"].btn01 {
 	#keyword input[type="submit"] {
 		margin:0; 
 		padding:0; 
-		width:85px; 
+		width:70px; 
 		height:28px; 
 		border:none;
 		background-color: #84bcbc; 
@@ -890,7 +895,15 @@ input, textarea, .uneditable-input {
 	font-size: 1.5em;
 	color: #333;
 }
-
+.checkbox input{
+	margin-top: 2px;
+}
+.lable03{
+	margin-top: 10px;
+}
+.lable03 input, .checkbox input{
+	margin-top: -3px;
+}
 .form_section {
 	margin:0; 
 	border-bottom: 1px solid #CCCCCC;
@@ -956,6 +969,12 @@ input, textarea, .uneditable-input {
 	outline: 0;
 	padding-top: 8px;
 }
+.form_section .styled-select select:focus {
+
+    outline: 0 none;
+  
+}
+
 .form_section .styled-select {
 	margin:0; 
 	padding:0px 5px; 
